# VideoStream

./: .gitignore  Blocking Gaps vs architecture.md  DOCKER_ARCHITECTURE.md  HLS_IMPLEMENTATION.md  INTERVIEW_IMPROVEMENTS.md  README.md  SUBMISSION_CHECKLIST.md  SYSTEM_DESIGN.md  architecture.md  context.md  docker-compose.yml  nginx.conf  questions.md  requirement.md
.github/workflows/: ci.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/domain/: mod.rs
backend/src/service/: mod.rs
backend/src/storage/: mod.rs
backend/src/transcode/: mod.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/assets/: 2.B9Eu9g6B.css
frontend/.svelte-kit/output/client/_app/immutable/chunks/: entry.B-uwRMy-.js  index.CXRiJiS7.js  scheduler.C9_6wDfG.js  stores.DDnUyiq8.js
frontend/.svelte-kit/output/server/: index.js  manifest-full.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/chunks/: hooks.server.js  internal.js
frontend/.svelte-kit/output/server/entries/pages/: _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js
frontend/src/: app.html  hooks.server.js
frontend/src/routes/: +page.svelte
frontend/src/routes/watch/[id]/: +page.svelte
(+8 files in other folders)
