[package]
name = "video-streaming-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["limit", "cors"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
